# applied-data-sci-for-marketing-and-customer-insights

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/ch01/: ch01.md  nb01-np-introduction.ipynb
notebooks/ch02/: ch02.md  nb01-np-key-performance-indicators-and-visualizations.ipynb
notebooks/ch03/: ch03.md  nb01-np-drivers-behind-marketing-engagement.ipynb
notebooks/ch04/: ch04.md  nb01-np-from-engagement-to-conversion.ipynb
notebooks/ch05/: ch05.md  nb01-np-product-analytic.ipynb
notebooks/ch06/: ch06.md  nb01-np-product-recommendation.ipynb
notebooks/ch07/: ch07.md  nb01-np-customer-behavior.ipynb
notebooks/ch08/: ch08.md  nb01-np-predicting-engagement.ipynb
notebooks/ch09/: ch09.md  nb01-np-customer-life-time-value.ipynb
notebooks/ch10/: ch10.md  nb01-np-customer-segmentation.ipynb
notebooks/ch11/: ch11.md  nb01-np-customer-retention.ipynb
notebooks/ch12/: ch12.md  nb01-np-AB-testing.ipynb
